[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/porcellina.png" type="Texture" id=1]
[ext_resource path="res://Sprites/talk_bubble.png" type="Texture" id=2]
[ext_resource path="res://Porcellina.gd" type="Script" id=3]
[ext_resource path="res://outline.shader" type="Shader" id=4]
[ext_resource path="res://Light2.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.95948, 9.69023 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 4 )
shader_param/outline_color = Color( 0.956863, 0.87451, 0.87451, 1 )

[sub_resource type="CircleShape2D" id=3]
radius = 14.9257

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 4 )
shader_param/outline_color = Color( 1, 1, 1, 1 )

[sub_resource type="Animation" id=5]
resource_name = "blink"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/outline_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.956863, 0.87451, 0.87451, 1 ), Color( 0.396078, 0.2, 0.2, 1 ) ]
}

[node name="Porcellina" type="StaticBody2D"]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.970416, 1.71984 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 2 )
texture = ExtResource( 1 )

[node name="TalkArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TalkArea"]
position = Vector2( -1, 0 )
shape = SubResource( 3 )

[node name="TalkBubble" type="Sprite" parent="."]
material = SubResource( 4 )
position = Vector2( 9, -12 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 0.5
anims/blink = SubResource( 5 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( -0.0262797, -1.78978 )
scale = Vector2( 0.963615, 0.264215 )
texture = ExtResource( 5 )
color = Color( 0.909804, 0, 0, 1 )

[node name="TalkTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="body_entered" from="TalkArea" to="." method="_on_TalkArea_body_entered"]
[connection signal="body_exited" from="TalkArea" to="." method="_on_TalkArea_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="TalkTimer" to="." method="_on_TalkTimer_timeout"]
